fix: Use semantic version comparison in autoupdate to prevent downgrades (#37)
## Summary
🤖 Generated with [Nori](https://www.npmjs.com/package/nori-ai)

- Fixed autoupdate hook to use semantic version comparison instead of
simple string inequality
- Prevents downgrades when local nightly builds have higher version
numbers than published npm releases
- Gracefully handles malformed version strings from npm
- Added comprehensive test coverage for version comparison edge cases

## Changes

**Implementation:**
- Installed `semver` package for proper semantic version comparison
- Replaced `installedVersion !== latestVersion` with
`semver.gt(latestVersion, installedVersion)`
- Added `semver.valid()` check to validate npm versions before
comparison
- Consolidated update check logic into single `updateAvailable` variable

**Testing:**
- Added 4 new test cases covering:
  - Downgrade prevention (installed 14.2.0 vs npm 14.1.0)
  - Nightly build handling (installed 14.2.0-nightly vs npm 14.1.0)
  - Prerelease upgrade (installed 14.1.0-nightly vs npm 14.1.0)
  - Malformed version handling (invalid version strings)
- All 384 tests pass (380 existing + 4 new)

**Documentation:**
- Updated `src/installer/features/hooks/config/docs.md` to document
semver usage and version comparison logic

## Test Plan
- [x] All existing tests pass
- [x] New tests verify downgrade prevention
- [x] New tests verify prerelease version handling
- [x] New tests verify malformed version handling
- [x] Format and lint checks pass
- [x] Documentation updated

Share Nori with your team: https://www.npmjs.com/package/nori-ai

Co-authored-by: Nori <noreply@tilework.tech>

--- a/package.json
+++ b/package.json
@@ -30,13 +30,15 @@
     "format:eslint": "eslint . --fix"
   },
   "dependencies": {
+    "@types/semver": "^7.7.1",
     "ajv": "^8.17.1",
     "commander": "^14.0.2",
     "firebase": "^12.3.0",
     "firebase-admin": "^13.5.0",
     "glob": "^11.0.3",
     "minimist": "^1.2.8",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "semver": "^7.7.3"
   },
   "devDependencies": {
     "@types/minimist": "^1.2.5",
