--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "minimist": "^1.2.8",
     "node-fetch": "^3.3.2",
     "semver": "^7.7.3",
-    "tar": "^7.5.2"
+    "tar": "^7.5.2",
+    "wrap-ansi": "^9.0.2"
   },
   "devDependencies": {
     "@types/minimist": "^1.2.5",
