--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@types/semver": "^7.7.1",
     "ajv": "^8.17.1",
+    "better-sqlite3": "^12.5.0",
     "commander": "^14.0.2",
     "firebase": "^12.3.0",
     "firebase-admin": "^13.5.0",
@@ -42,6 +43,7 @@
     "tar": "^7.5.2"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/minimist": "^1.2.5",
     "@types/node": "^22.0.0",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
