feat: Add interactive prepublish script for release notes
Replace the automatic headless Claude invocation with an interactive
script that:
- Prompts user whether to update release notes
- If yes, runs headless Claude to generate notes
- Prompts whether to stage and commit the changes
- Aborts publish (exit 1) if user declines to commit

This gives users explicit control over the release notes workflow
before publishing to npm.
🤖 Generated with [Nori](https://nori.ai)

Co-Authored-By: Nori <contact@tilework.tech>

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "build": "./scripts/build.sh",
     "prepare": "npm run build",
-    "prepublishOnly": "claude -p 'Read and follow release-notes-update.md exactly.' --allowedTools 'Read,Edit,Write,Bash(git log:*),Bash(git diff:*),Bash(git add:*),Grep,Glob'",
+    "prepublishOnly": "./scripts/prepublish.sh",
     "watch": "tsc --watch",
     "dev": "tsc && tsc-alias && node build/index.js",
     "inspector": "npx @modelcontextprotocol/inspector build/index.js",
