fix: Add missing dist-tags auth

--- a/.github/workflows/skillsets-release.yml
+++ b/.github/workflows/skillsets-release.yml
@@ -311,6 +311,8 @@ jobs:
       - name: Update @next tag to point to latest
         if: ${{ needs.validate.outputs.is_prerelease != 'true' }}
         continue-on-error: true
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           npm dist-tag add "${{ env.NPM_PACKAGE_NAME }}@${{ needs.validate.outputs.version }}" next
           echo "" >> "$GITHUB_STEP_SUMMARY"
