refactor: Rename seaweed CLI binary to nori-skillsets
Rename the temporary "seaweed" CLI binary to "nori-skillsets" throughout
the codebase to match the official package branding.

Changes:
- Rename seaweed.ts → nori-skillsets.ts (CLI entry point)
- Rename seaweedCommands.ts → noriSkillsetsCommands.ts
- Update CliName type: "seaweed" → "nori-skillsets"
- Rename SEAWEED_COMMANDS → NORI_SKILLSETS_COMMANDS
- Update all registerSeaweed*Command → registerNoriSkillsets*Command
- Update package.json and package.template.json bin entries
- Update build and packaging scripts
- Update all documentation (docs.md files)
- Update JSDoc comments from "seaweed" to "nori-skillsets"

Note: displaySeaweedBed in asciiArt.ts is intentionally preserved
as it refers to decorative ASCII art, not the CLI name.
🤖 Generated with [Nori](https://nori.ai)

Co-Authored-By: Nori <contact@tilework.tech>

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "type": "module",
   "bin": {
     "nori-ai": "./build/src/cli/nori-ai.js",
-    "seaweed": "./build/src/cli/seaweed.js"
+    "nori-skillsets": "./build/src/cli/nori-skillsets.js"
   },
   "scripts": {
     "build": "./scripts/build.sh",
