--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
     "better-sqlite3": "^12.5.0",
+    "chokidar": "^5.0.0",
     "commander": "^14.0.2",
     "firebase": "^12.3.0",
     "firebase-admin": "^13.5.0",
