refactor: make nori-skillsets sole package identity (Phase 3-5)
Update package.json name to nori-skillsets, remove nori-ai bin entry,
narrow CliName type to only nori-skillsets, simplify getCommandNames
to always return nori-skillsets commands, and change default
tileworkSource from nori-ai to nori-skillsets.
🤖 Generated with [Nori](https://nori.ai)

Co-Authored-By: Nori <contact@tilework.tech>

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nori-ai",
+  "name": "nori-skillsets",
   "version": "19.1.8",
   "keywords": [
     "claude code",
@@ -11,7 +11,6 @@
   "description": "Nori Profiles plugin for Claude Code",
   "type": "module",
   "bin": {
-    "nori-ai": "./build/src/cli/nori-ai.js",
     "nori-skillsets": "./build/src/cli/nori-skillsets.js"
   },
   "scripts": {
