fix: exclude test files from npm package
Previously, 365 test files (*.test.js, *.test.js.map, *.test.d.ts,
*.test.d.ts.map) were being bundled into the npm package. These test
files contained test fixture data that could potentially contaminate
user configurations.

This change:
- Adds exclusion patterns for compiled test files in build/
- Excludes test-utils/ directory (test helpers)
- Excludes nori-tests/ directory (test documentation)
- Excludes vitest.config.ts (test configuration)
- Adds preemptive exclusion for *.spec.* patterns

The exclusion patterns must come AFTER the !build/ inclusion rule
in .npmignore to properly override it.

Package size reduced by excluding ~365 unnecessary test files.
🤖 Generated with [Nori](https://nori.ai)

Co-Authored-By: Nori <contact@tilework.tech>

--- a/.npmignore
+++ b/.npmignore
@@ -6,8 +6,22 @@ tsconfig.json
 node_modules/
 .nvmrc
 .worktrees/
+tests/
+nori-tests/
+vitest.config.ts
 
 # Keep these for installation
 !bin/
 !hooks/
 !build/
+
+# Test files (exclude compiled tests from build/ - must come AFTER !build/)
+build/**/*.test.js
+build/**/*.test.js.map
+build/**/*.test.d.ts
+build/**/*.test.d.ts.map
+build/**/*.spec.js
+build/**/*.spec.js.map
+build/**/*.spec.d.ts
+build/**/*.spec.d.ts.map
+build/**/test-utils/
